cds/modules/theme/assets/bootstrap3/scss/cds/cds.scss
/* ... */
.cds-cover {
  margin-top: -70px !important;
}

.bootstrap-padding-top {
  padding-top: 70px;
}

.cds-max-fluid-width {
  max-width: 1600px;
}

.cds-deposit-panel {
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
  .is-sticky {
    // the height of the navbar
    margin-top: 65px !important;
  }
  & > .panel-heading {
    line-height: 35px;
  }
}

.cds-deposit-panel-project {
  & > .panel-heading {
    background-color: $btn-info-bg !important;
    color: $btn-info-color !important;
  }
}

.panel-heading-warning {
  background-color: $brand-warning !important;
}

.cds-deposit-metadata-extraction-alert {
  line-height: 33px;
  span {
    line-height: 33px;
  }
}

.ng-modal-dialog {
  width: 100%!important;
  max-width: 900px;
}

.container-fluid {
  @extend .cds-max-fluid-width;
}

.cds-video-iframe {
  width: 100%;
  margin: 0 auto;
  max-width: 2200px;
  position: relative;
  height: calc((9/16)*70vw) !important;
  max-height: calc(100vh - 300px) !important;
  min-height: var(--flex854-mode-player-height) !important;
  iframe {
    max-width: 100%;
    max-height: 100%;
    position: absolute;
    margin: 0 auto;
	  top: 0;
	  left: 0;
    bottom: 0;
    right: 0;
    width: calc( ((100vh - 200px) / 9 ) * 16 )!important;
    height: calc(100vh - 200px) !important;
  }
}

@media(max-width: 768px) {
  .cds-video-iframe {
    max-height: calc(100vh - 120px) !important;
    iframe {
      width: calc( ((100vh - 120px) / 9 ) * 16 )!important;
      height: calc(100vh - 120px) !important;
    }
  }
}

a[ng-click], a[ng-href]{
  cursor: pointer;
}

i.sort-handle {
  cursor: move;
}

.cds-navbar-nav-bg-opacity {
  background-color: rgba(35, 35, 35, 0.9);
}

.field-required:after {
  content: " *";
  color: red;
}

.flex-container {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.flex-item {
  flex: 1 0 auto;
}

.cds-footer-separator {
  width: 100%;
  height: auto;
  border-top: 1px solid #fff;
}

.cds-navbar-brand {
  font-size: 25px;
}

.cds-title-section-decoration {
  display: inline-block;
}

.cds-footer-brand {
  line-height: 30px !important;
}

.cds-border {
  border: 1px $bg-gray solid !important
}

.ng-modal-dialog-content > .ng-scope {
  max-height: 300px;
  overflow-y: auto;
}

.unicorn-rainbow {
  position: absolute;
  left: 0;
  bottom: 80px;
  width: 120px;
}

a.cds-anchor{
  color: black;
}

a.cds-anchor:hover{
  text-decoration: none;
}

/////////

// /record/{recid}

.cds-record-detail-bottom {
  dd, dt, dd li {
    line-height: 1.6; // A bit more space between elements
  }
}

@media(min-width: 768px) {
  .cds-record-detail-title {
    // Add some margin on bigger screens screen
    margin-left: 90px; // half of the default bootstrap dd element margin
  }
}

.cds-record-detail {
  .cds-record-detail-files {
    .list-group-item.active {
      a.cds-record-detail-files-filename {
        color: #fff;
      }
    }
  }
}

// ngdialog rules are very specific, so we need to be even more specific to
// overwrite them
.ngdialog.ngdialog-file-preview {
  .ngdialog-content {
    width: 60%;
  }
}

.ac-container .ac-menu .ac-menu-item {
  border-bottom: 1px solid $bg-gray;
  margin: 0;
  padding: 5px;
}

.ac-container {
  top: unset!important;
}

.w-100 {
  width: 100%;
}

.display-block {
  display: block;
}

// Tags

.cds-tags ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.cds-tags ul li {
  display: inline-block;
  margin: 0 .3em .3em 0;
  padding: 0;
  max-width: 100%;
}

.cds-tags ul li a {
  display: inline-block;
  height: 28px;
  line-height: 28px;
  padding: 0 1em;
  background-color: #fff;
  border: 1px solid $bg-gray;
  border-radius: 3px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: $gray;
  font-size: 13px;
  text-decoration: none;
  -webkit-transition: .2s;
  transition: .2s;
  max-width: 100%;
}

.cds-keywords ul li a:hover {
  height: auto;
  text-overflow: visible;
  white-space: normal;

}

.cds-home-tags ul li a {
    padding: 0 0.6em;
    background-color: #111;
    border: 1px solid #eee;
    border-radius: 6px;
    color: #eee;
    text-transform: uppercase;
}

.cds-tags ul li a:hover {
  background-color: $primary-color;
  border: 1px solid $primary-color;
  color: #fff;
}

.cds-home-tags ul li a:hover {
    color: #ddd;
    border: 1px solid #ddd;
    background-color: transparent;
}
.cds-search-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.cds-tags-custom {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-top: 5px;

    li a {
    max-width: 400px !important;
    background-color: transparent !important;
    border: 1px solid $cds-primary-color !important;
    color: $cds-primary-color !important;
    &:hover {
      background-color:lighten($cds-primary-color, 10%) !important;
      color: #fff !important;
    }
  }  
}

.custom-flex-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.cds-video-title-text {
  color: $cds-primary-color !important;
  min-height: 3em;
}

/////////

// /search

.line-clamp {
  display: -webkit-box;
  -webkit-box-orient: vertical;

  position: relative;
  line-height: 1.2;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 0 !important;

  -webkit-line-clamp : 4;
  height: calc(1em * 1.2 * 4);
}

.line-clamp:after {
  content: '';
  text-align: right;
  bottom: 0;
  right: 0;
  width: 25%;
  display: block;
  position: absolute;
  height: calc(1em * 1.2);
  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.9) 75%);
}

@supports (-webkit-line-clamp: 1) {
  .line-clamp {
    height: auto;
  }
  .line-clamp:after {
    display: none !important;
  }
}
#invenio-search {
  invenio-search {
    display: flex;
    height: 100vh;
    flex-direction: column;
  }
}
#cds-deposit-index {
  invenio-search {
    display: flex;
    height: 100vh;
    flex-direction: column;
  }
}
.cds-facets {
  border-color: $bg-gray;
}
/* ... */

